--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
     
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/styles.css">
 
@@ -36,7 +37,7 @@
                 <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-home fa-lg"></i>Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="aboutus.html"><i class="fa fa-info fa-lg"></i>About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i>Sites</a></li>
-                <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-address-card fa-lg"></i>Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card fa-lg"></i>Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -73,14 +74,7 @@
         </div>
     </div>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-    </nav>
-
-    <footer>
+    <footer class="site-footer">
         <div class="container">
             <div class="row">
                 <div class="col-4 col-sm-2 offset-1">
@@ -89,19 +83,19 @@
                         <li><a href="#">Home</a></li>
                         <li><a href="aboutus.html">About</a></li>
                         <li><a href="#">Sites</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="contactus.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-sm-5 text-center">
                     <h5>Social</h5>
-                        <a href="http://instagram.com/"><i class="fa fa-instagram fa-lg"></i></a>
-                        <a href="http://facebook.com/"><i class="fa fa-facebook fa-lg"></i></a>
-                        <a href="http://twitter.com/"><i class="fa fa-twitter fa-lg"></i></a>
-                        <a href="http://youtube.com/"><i class="fa fa-youtube fa-lg"></i></a>
+                    <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/" target="_blank"><i class="fa fa-instagram fa-lg"></i></a>
+                    <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/" target="_blank"><i class="fa fa-facebook fa-lg"></i></a>
+                    <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/" target="_blank"><i class="fa fa-twitter fa-lg"></i></a>
+                    <a class="btn btn-social-icon btn-google" href="http://youtube.com/" target="_blank"><i class="fa fa-youtube fa-lg"></i></a>
                 </div>
                 <div class="col-sm-4 text-center">
-                <i class="fa fa-phone fa-lg text-primary"></i> 1-206-555-1234<br />
-                <i class="fa fa-envelope fa-lg text-primary"></i> campsites@nucamp.co
+                    <a role="button" class="btn btn-link"><i class="fa fa-phone fa-lg text-primary"></i> 1-206-555-1234</a><br />
+                    <a role="button" class="btn btn-link"><i class="fa fa-envelope fa-lg text-primary"></i> campsites@nucamp.co</a>
                 </div>
             </div>
         </div>  
