--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="col-xs col-md-4 col-xl-2">
-                    <a href="#reserveForm" class="text-nowrap"><button type="button" class="btn btn-info btn-lg mt-4">Reserve Campsite</button></a>
+                    <a href="#reserveForm" role="button" class="btn btn-lg btn-info" class="text-nowrap" data-toggle="tooltip" data-html="true" title="Or call us at 1-206-555-1234">Reserve Campsite</a>
                 </div>
             </div>
         </div>
