--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <body>
 
+    <!--HEADER INFO-->
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row">
@@ -28,12 +29,69 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="col-xs col-md-4 col-xl-2">
-                    <a href="#reserveForm" role="button" class="btn btn-lg btn-info" class="text-nowrap" data-toggle="tooltip" data-html="true" title="Or call us at 1-206-555-1234">Reserve Campsite</a>
+                    <a data-toggle="modal" data-target="#reserveModal" role="button" class="btn btn-lg btn-info" class="text-nowrap">Reserve Campsite</a>
                 </div>
             </div>
         </div>
     </header>
 
+    <!--MODAL INFO-->
+    <div id="reserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header bg-info">
+                    <h3 class="modal-title text-white">Reserve A Campsite</h3>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                        <form id="reserveForm">
+                            <div class="form-group row">
+                                <label for="numCampers" class="col-xs col-sm-6 col-form-label">Number of Campers</label>
+                                <div class="col col-sm-6">
+                                <select name="numCampers" id="numCampers" class="form-control">
+                                    <option value="select">Select...</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                </select>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label for="date" class="col-xs col-sm-6 col-form-label">Date</label>
+                                <div class="col col-sm-6">
+                                    <input type="date" class="form-control" id="date" name="date" placeholder="Date">
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="col col-sm-6 col-form-label">Campsite Type</label>
+                                <div class="col-2 btn-group btn-group-toggle" data-toggle="buttons">
+                                    <label class="btn btn-success">
+                                        <input type="radio" name="siteType" id="siteTent" value="tent" autocomplete="off"> Tent
+                                      </label>
+                                      <label class="btn btn-primary">
+                                        <input type="radio" name="siteType" id="siteRV" value="RV" autocomplete="off"> RV
+                                      </label>
+
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                    <button type="submit" class="btn btn-primary">Search</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--NAVBAR INFO-->
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#"><img src="img/logo.png" height="30" width="30"></a>
@@ -53,6 +111,8 @@
             </div>
         </div>
     </nav>
+
+    <!--LOGIN INFO-->
     <div id="loginModal" class="modal fade" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -90,6 +150,7 @@
         </div>
     </div>
 
+    <!--CAROUSEL INFO-->
     <div class="container">
         <div class="row row-content">
             <div class="col-md-8 mx-auto">
@@ -136,6 +197,7 @@
             </div>
         </div>
 
+        <!--CONTENT INFO-->
         <div class="row row-content align-items-center">
             <div class="col-sm-4 order-sm-last col-md-3">
                 <h2 class="text-sm-right">Discover & Review</h2>
@@ -181,6 +243,8 @@
                 </div>
             </div>
         </div>
+
+        <!--CARD RESERVE FORM-->
         <div class="row row-content align-items-center">
             <div class="col col-sm-6 mx-auto">
                 <div class="card">
@@ -254,6 +318,12 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <!-- <script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        })
+    </script> -->
 
 </body>
 
